--- a/htmldoc/src/TChannel.h.html
+++ b/htmldoc/src/TChannel.h.html
@@ -4,7 +4,7 @@
 <!--                                             -->
 <!-- Author: ROOT team (rootdev@cern.ch)         -->
 <!--                                             -->
-<!--   Date: Mon Sep  8 13:16:39 2014            -->
+<!--   Date: Mon Sep  8 14:15:49 2014            -->
 <!--                                             -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
@@ -82,7 +82,7 @@
     <span class="keyword">static</span> <span class="keyword">void</span> <a href="../TChannel.html#TChannel:DeleteAllChannels" title="void TChannel::DeleteAllChannels()">DeleteAllChannels</a>();
 
   <span class="keyword">private</span>:
-    <span class="keyword">static</span> <a href="../TChannel.html">TChannel</a> *<a href="../TChannel.html#TChannel:gChannel" title="TChannel* TChannel::gChannel">gChannel</a>;                             
+    <span class="keyword">static</span> <a href="../TChannel.html">TChannel</a> *<a href="../TChannel.html#TChannel:gChannel" title="TChannel* TChannel::gChannel">gChannel</a>;                            <span class="comment">//The Global Channel <a href="../TChannel.html#TChannel:address" title="int TChannel::address">address</a>. Holds the last channel read. </span>
 
     <span class="keyword">int</span>	         <a href="../TChannel.html#TChannel:address" title="int TChannel::address">address</a>;                                 <span class="comment">//The <a href="../TChannel.html#TChannel:address" title="int TChannel::address">address</a> of the digitizer</span>
     <span class="keyword">int</span>		 <a href="../TChannel.html#TChannel:integration" title="int TChannel::integration">integration</a>;                             <span class="comment">//The charge <a href="../TChannel.html#TChannel:integration" title="int TChannel::integration">integration</a> setting</span>
@@ -192,7 +192,7 @@
 <!--SIGNATURE-->
 <div id="footer">
 
-<em>&raquo; Last changed: 2014-09-08 13:16 </em><em>&raquo; Last generated: 2014-09-08 13:16</em><br />
+<em>&raquo; Last changed: 2014-09-08 14:15 </em><em>&raquo; Last generated: 2014-09-08 14:15</em><br />
 <em>This page has been automatically generated. For comments or suggestions regarding the documentation or ROOT in general please send a mail to <a href="mailto:rootdev@cern.ch">ROOT support</a>.</em>
 </div>
 </div>
