--- a/htmldoc/INCLUDE_Index.html
+++ b/htmldoc/INCLUDE_Index.html
@@ -4,7 +4,7 @@
 <!--                                             -->
 <!-- Author: ROOT team (rootdev@cern.ch)         -->
 <!--                                             -->
-<!--   Date: Mon Sep  8 14:15:48 2014            -->
+<!--   Date: Mon Sep  8 14:47:04 2014            -->
 <!--                                             -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
@@ -54,7 +54,7 @@ return false;}
 </div><br />
 <ul id="indx">
 <li class="idxl0"><a name="idx0"></a><a href="./TChannel.html"><span class="typename">TChannel</span></a> Contains the Digitizer Information</li>
-<li class="idxl1"><a href="./TDataParser.html"><span class="typename">TDataParser</span></a> </li>
+<li class="idxl1"><a href="./TDataParser.html"><span class="typename">TDataParser</span></a> Parses the MIDAS files into DAQ-dependent TFragments. </li>
 <li class="idxl0"><a name="idx1"></a><a href="./TFragment.html"><span class="typename">TFragment</span></a> Event Fragments</li>
 <li class="idxl1"><a href="./TFragmentQueue.html"><span class="typename">TFragmentQueue</span></a> </li>
 <li class="idxl0"><a name="idx2"></a><a href="./TFragmentSelector.html"><span class="typename">TFragmentSelector</span></a> </li>
@@ -74,7 +74,7 @@ return false;}
 <!--SIGNATURE-->
 <div id="footer">
 
-<em>&raquo; Last changed: 2014-09-08 14:15 </em><em>&raquo; Last generated: 2014-09-08 14:15</em><br />
+<em>&raquo; Last changed: 2014-09-08 14:47 </em><em>&raquo; Last generated: 2014-09-08 14:47</em><br />
 <em>This page has been automatically generated. For comments or suggestions regarding the documentation or ROOT in general please send a mail to <a href="mailto:rootdev@cern.ch">ROOT support</a>.</em>
 </div>
 </div>
