--- a/htmldoc/TGriffin.html
+++ b/htmldoc/TGriffin.html
@@ -4,7 +4,7 @@
 <!--                                             -->
 <!-- Author: ROOT team (rootdev@cern.ch)         -->
 <!--                                             -->
-<!--   Date: Thu Sep 11 17:19:33 2014            -->
+<!--   Date: Thu Sep 11 17:22:14 2014            -->
 <!--                                             -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
@@ -58,7 +58,16 @@ return false;}
 </div>
 <div class="dropshadow"><div class="withshadow"><h1><a name="TGriffin:description"></a>class TGriffin: public <a href="./TGRSIDetector.html">TGRSIDetector</a></h1>
 <div class="classdescr">
-</div>
+<pre>
+
+ <a href="./TGriffin.html">TGriffin</a>
+
+ The <a href="./TGriffin.html">TGriffin</a> class defines the observables and algorithms used
+ when analyzing GRIFFIN data. It includes detector positions,
+ add-back methods, etc.
+
+
+</pre></div>
 </div></div>
 
 <div id="functions">
@@ -321,7 +330,7 @@ tuned in order to make add-back the most efficient.
 <!--SIGNATURE-->
 <div id="footer">
 
-<em>&raquo; Last changed: Thu Sep 11 17:19:33 2014 </em><em>&raquo; Last generated: 2014-09-11 17:19</em><br />
+<em>&raquo; Last changed: Thu Sep 11 17:22:14 2014 </em><em>&raquo; Last generated: 2014-09-11 17:22</em><br />
 <em>This page has been automatically generated. For comments or suggestions regarding the documentation or ROOT in general please send a mail to <a href="mailto:rootdev@cern.ch">ROOT support</a>.</em>
 </div>
 </div>
